--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
+    "storybook-addon-designs": "^6.3.1",
     "typescript": "~4.7.2"
   }
 }
